<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout style="@style/Formulario.ContenedorPaso">

        <TextView
            style="@style/Formulario.TituloPaso"
            android:text="@string/titulo_paso_profesional" />

        <TextView
            style="@style/Formulario.DescripcionPaso"
            android:text="@string/desc_paso_profesional" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Formulario.Campo"
            android:hint="@string/campo_cargo_aspira">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCargoAspira"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textCapSentences"
                android:maxLength="100" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Formulario.Campo"
            android:hint="@string/campo_profesion">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etProfesion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textCapSentences"
                android:maxLength="100" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Formulario.Campo"
            android:hint="@string/campo_anios">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etAniosExperiencia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="2" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Formulario.Campo"
            android:hint="@string/campo_habilidades"
            app:helperText="@string/ayuda_habilidades">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etHabilidades"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|start"
                android:inputType="textMultiLine|textCapSentences"
                android:maxLength="500"
                android:minLines="2" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Formulario.CampoExtenso"
            android:hint="@string/campo_perfil"
            app:helperText="@string/ayuda_perfil">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPerfilProfesional"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|start"
                android:inputType="textMultiLine|textCapSentences"
                android:maxLength="@integer/max_texto_extenso"
                android:minLines="6" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
