<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout style="@style/Formulario.ContenedorPaso">

        <TextView
            style="@style/Formulario.TituloPaso"
            android:text="@string/titulo_paso_experiencia" />

        <TextView
            style="@style/Formulario.DescripcionPaso"
            android:text="@string/desc_paso_experiencia" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Formulario.Campo"
            android:hint="@string/campo_empresa">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmpresa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textCapWords"
                android:maxLength="100" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Formulario.Campo"
            android:hint="@string/campo_cargo_empresa">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCargoEmpresa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textCapSentences"
                android:maxLength="100" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilFechaInicio"
            style="@style/Widget.Formulario.CampoFecha"
            android:hint="@string/campo_fecha_inicio">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etFechaInicio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="date"
                android:maxLength="10" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilFechaFin"
            style="@style/Widget.Formulario.CampoFecha"
            android:hint="@string/campo_fecha_fin"
            app:helperText="@string/ayuda_fecha_fin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etFechaFin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="date"
                android:maxLength="10" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Formulario.CampoExtenso"
            android:hint="@string/campo_funciones">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etFunciones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|start"
                android:inputType="textMultiLine|textCapSentences"
                android:maxLength="@integer/max_texto_extenso"
                android:minLines="6" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
