<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout style="@style/Formulario.ContenedorPaso">

        <TextView
            style="@style/Formulario.TituloPaso"
            android:text="@string/titulo_paso_personal" />

        <TextView
            style="@style/Formulario.DescripcionPaso"
            android:text="@string/desc_paso_personal" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Formulario.Campo"
            android:hint="@string/campo_nombre">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="name"
                android:imeOptions="actionNext"
                android:inputType="textPersonName|textCapWords"
                android:maxLength="100" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Formulario.Campo"
            android:hint="@string/campo_correo">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="emailAddress"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLength="120" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Formulario.Campo"
            android:hint="@string/campo_telefono">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="phone"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:maxLength="16" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Formulario.Campo"
            android:hint="@string/campo_ciudad">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCiudad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="addressLocality"
                android:imeOptions="actionNext"
                android:inputType="textCapWords|textPostalAddress"
                android:maxLength="80" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilFechaNacimiento"
            style="@style/Widget.Formulario.CampoFecha"
            android:hint="@string/campo_fecha_nacimiento">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etFechaNacimiento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="birthDateFull"
                android:imeOptions="actionDone"
                android:inputType="date"
                android:maxLength="10" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
